fixed contrast

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -118,7 +118,7 @@ html {
     display: inline-block;
     font-size: 16px;
     font-weight: 700;
-    color: #920C0C;
+    color: #ffffff;
     width: 100%;
     transition: all 0.5s;
     border-top: 2px solid #fff;
@@ -309,7 +309,7 @@ html {
 .section-heading .line-dec {
     width: 60px;
     height: 3px;
-    /* background-color: #a43f49; */
+    background-color: #a43f49;
     margin: 10px auto;
 }
 
